# hello_world_discord_ish

./: Cargo.toml
src/: lib.rs
