[package]
name = "hello-world-discord"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
discord-flows = "0.5.1"
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
log = "0.4"
serde_json = "1.0"
anyhow = "1"
rust-bert = "0.21.0"
tch = "0.13.0"
env_logger = "0.10"